test/libyul/yulSyntaxTests/opcode_for_functions.yul
{
	function gas() {}
}
// ----
// ParserError 5568: (12-15='gas'): Cannot use builtin function name "gas" as identifier name.
